--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 FACEBOOK_KEY=345509939414301
 FACEBOOK_SECRET=ac75ecfc5caac8255e2e69a207ada43e
+CLIENT_KEY=336451940915-qj649d7salqg1nluh2slbviq9eoqpstr.apps.googleusercontent.com
+CLIENT_SECRET=4JPGnvAEHCEbBXRH5UBrYQJy
