--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-
+.env
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
@@ -26,6 +26,7 @@
 
 /public/assets
 .byebug_history
+
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
